// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render first selected 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: 8px 12px 12px;
  margin: 0;
}

.c1:enabled {
  cursor: pointer;
}

.c1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c1:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c1:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.c3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.c3:enabled {
  cursor: pointer;
}

.c3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c3:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c3:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c3:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 8px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.c4:enabled {
  cursor: pointer;
}

.c4:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c4:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c4:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c4:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.c6:enabled {
  cursor: pointer;
}

.c6:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c6:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c6:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c6:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c7 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: 8px 12px 12px;
  margin: 0;
}

.c7:enabled {
  cursor: pointer;
}

.c7:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c7:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c7:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c7:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c7:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.c5 > * {
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    data-testid="pbl-tabs"
  >
    <button
      class="c1"
      data-testid="pbl-tab"
      name="hello"
    >
      <span
        class="c2"
      >
        Hello
      </span>
    </button>
    <button
      class="c3"
      data-testid="pbl-tab"
      name="world"
    >
      <span
        class="c2"
      >
        World
      </span>
    </button>
    <button
      class="c3"
      data-testid="pbl-tab"
      name="bye"
    >
      <span
        class="c2"
      >
        Bye
      </span>
    </button>
    <button
      class="c4"
      data-testid="pbl-tab"
    >
      <div
        class="c5"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      class="c6"
      data-testid="pbl-tab"
      name="hello"
    >
      <span
        class="c2"
      >
        Hello
      </span>
    </button>
    <button
      class="c7"
      data-testid="pbl-tab"
      name="world"
    >
      <span
        class="c2"
      >
        World
      </span>
    </button>
    <button
      class="c6"
      data-testid="pbl-tab"
      name="bye"
    >
      <span
        class="c2"
      >
        Bye
      </span>
    </button>
  </div>
</div>
`;

exports[`Render tabs with icons 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.c1:enabled {
  cursor: pointer;
}

.c1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c1:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: 8px 12px 12px;
  margin: 0;
}

.c4:enabled {
  cursor: pointer;
}

.c4:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c4:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c4:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c4:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c4:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 8px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.c5:enabled {
  cursor: pointer;
}

.c5:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c5:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c5:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c5:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c7 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.c7:enabled {
  cursor: pointer;
}

.c7:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c7:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c7:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c7:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  width: 20px;
  height: 20px;
}

.c2 > * {
  width: 20px;
  height: 20px;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.c6 > * {
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    data-testid="pbl-tabs"
  >
    <button
      class="c1"
      data-testid="pbl-tab"
      name="first"
    >
      <div
        class="c2"
      >
        <div
          data-testid="icon1"
        >
          icon1
        </div>
      </div>
      <span
        class="c3"
      >
        First tab
      </span>
    </button>
    <button
      class="c4"
      data-testid="pbl-tab"
      name="second"
    >
      <div
        class="c2"
      >
        <div
          data-testid="icon2"
        >
          icon2
        </div>
      </div>
      <span
        class="c3"
      >
        Second tab
      </span>
    </button>
    <button
      class="c1"
      data-testid="pbl-tab"
      name="third"
    >
      <div
        class="c2"
      >
        <div
          data-testid="icon3"
        >
          icon3
        </div>
      </div>
      <span
        class="c3"
      >
        Third tab
      </span>
    </button>
    <button
      class="c5"
      data-testid="pbl-tab"
    >
      <div
        class="c6"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      class="c7"
      data-testid="pbl-tab"
      name="first"
    >
      <div
        class="c2"
      >
        <div
          data-testid="icon1"
        >
          icon1
        </div>
      </div>
      <span
        class="c3"
      >
        First tab
      </span>
    </button>
    <button
      class="c7"
      data-testid="pbl-tab"
      name="second"
    >
      <div
        class="c2"
      >
        <div
          data-testid="icon2"
        >
          icon2
        </div>
      </div>
      <span
        class="c3"
      >
        Second tab
      </span>
    </button>
    <button
      class="c7"
      data-testid="pbl-tab"
      name="third"
    >
      <div
        class="c2"
      >
        <div
          data-testid="icon3"
        >
          icon3
        </div>
      </div>
      <span
        class="c3"
      >
        Third tab
      </span>
    </button>
  </div>
</div>
`;

exports[`Show "more" tab when there are too many tabs to fit the content 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: 8px 12px 12px;
  margin: 0;
}

.c1:enabled {
  cursor: pointer;
}

.c1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c1:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c1:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.c3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 8px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.c3:enabled {
  cursor: pointer;
}

.c3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c3:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c3:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c3:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.c5:enabled {
  cursor: pointer;
}

.c5:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c5:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c5:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c5:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.c4 > * {
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    data-testid="pbl-tabs"
    fake-width="100"
  >
    <button
      class="c1"
      data-testid="pbl-tab"
      fake-width="50"
      name="hello"
    >
      <span
        class="c2"
      >
        Hello
      </span>
    </button>
    <button
      class="c3"
      data-testid="pbl-tab"
      fake-width="50"
    >
      <div
        class="c4"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      class="c5"
      data-testid="pbl-tab"
      fake-width="50"
      name="hello"
    >
      <span
        class="c2"
      >
        Hello
      </span>
    </button>
    <button
      class="c5"
      data-testid="pbl-tab"
      fake-width="50"
      name="world"
    >
      <span
        class="c2"
      >
        World
      </span>
    </button>
    <button
      class="c5"
      data-testid="pbl-tab"
      fake-width="50"
      name="hi"
    >
      <span
        class="c2"
      >
        Hi
      </span>
    </button>
    <button
      class="c5"
      data-testid="pbl-tab"
      fake-width="50"
      name="earth"
    >
      <span
        class="c2"
      >
        Earth
      </span>
    </button>
  </div>
</div>
`;

exports[`Work with one tab 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: 8px 12px 12px;
  margin: 0;
}

.c1:enabled {
  cursor: pointer;
}

.c1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c1:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c1:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.c3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 8px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.c3:enabled {
  cursor: pointer;
}

.c3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c3:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c3:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c3:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.c5:enabled {
  cursor: pointer;
}

.c5:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c5:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c5:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c5:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.c4 > * {
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    data-testid="pbl-tabs"
  >
    <button
      class="c1"
      data-testid="pbl-tab"
      name="hello"
    >
      <span
        class="c2"
      >
        Hello
      </span>
    </button>
    <button
      class="c3"
      data-testid="pbl-tab"
    >
      <div
        class="c4"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      class="c5"
      data-testid="pbl-tab"
      name="hello"
    >
      <span
        class="c2"
      >
        Hello
      </span>
    </button>
  </div>
</div>
`;
